<resources>
    <string name="app_name">PersoKbase</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lycée André Argouges</string>
    <string name="nav_header_subtitle">info.argouges@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Paramètres</string>
    <string name="action_syncro">Mise à jour</string>
    <string name="labelPreference">Préférences</string>
    <string name="editText">ENREGISTRER ICI DES DONNEES SECURISEES</string>
    <string name="Preference">Préférences de l\'application</string>
    <string name="Pref0">Stockage sur la mémoire externe</string>
    <string name="Pref1">Choisir l\'emplacement d\'enregistrement</string>
    <string name="Pref2">Mot de passe de chiffrement</string>
    <string name="Pref3">Modifier la clé secrète</string>
    <string name="Pref3box">Mot de passe de chiffrement</string>
    <string name="Pref3sum">8 caractères conseillés</string>
    <array name="liste_preferences">
        <item>Données de l\'application</item>
        <item>Medias du téléphone</item>
        <item>Mes documents</item>
        <item>Téléchargement</item>
    </array>
    <array name="liste_preferences_val">
        <item>/Android/data/</item>
        <item>/Android/media/</item>
        <item>/Documents/</item>
        <item>/Download/</item>
    </array>
    <!-- Les textes des menus droite -->
    <string name="menu_home">Accueil</string>
    <string name="menu_gallery">Photos</string>
    <string name="menu_security">Coffre-fort</string>
    <string name="menu_slideshow">Base de connaissance</string>
    <string name="menu_content">Ressources</string>
    <string name="menu_activity">Bonnes pratiques</string>
    <string name="menu_support">Vulnérabilités</string>
    <string name="menu_example">Tutoriels</string>
    <!-- Les textes des activités de maintenance (base de connaissance) -->
    <string name="SlideTextB1">Panne d\'alimentation</string>
    <string name="SlideTextB2">Panne de réseau</string>
    <string name="SlideTextB3">Panne matérielle</string>
    <string name="SlideTextB4">Panne de démarrage</string>
    <string name="SlideTextB5">Problème d\'affichage</string>
    <string name="SlideTextB6">Problème de pilote</string>
    <string name="SlideTextB7">Problème d\'impression</string>
    <string name="SlideTextBb1">Installer un logiciel en local</string>
    <string name="SlideTextBb2">Installer un périphérique USB</string>
    <string name="SlideTextBsb1">Licence libre</string>
    <string name="SlideTextBsb2">Licence copyleft</string>
    <string name="SlideTextBsb3">Licence ouverte</string>
    <!-- Les textes des activités de (ressources) -->
    <string name="ContentTextB">+ de détails</string>
    <!-- Les textes des activités de (bonnes pratiques) -->
    <string name="ActivityTextB1">Vidéos et YouTube</string>
    <string name="ActivityTextB2">Présentation powerpoint</string>
    <string name="ActivityTextB3">Animations flash</string>
    <string name="ActivityTextBb1">Pronote web et mobile</string>
    <string name="ActivityTextBb2">La recherche Google</string>
    <!-- Les textes des activités de sécurité (vulnérabilités) -->
    <string name="SupportTextB1">Connecter un matériel personnel au réseau</string>
    <string name="SupportTextB2">Utiliser un matériel personnel pour l\'enseignement</string>
    <string name="SupportTextB3">Déconnecter un matériel personnel du réseau</string>
    <string name="SupportTextB4">Effacer les traces laissées par un matériel personnel</string>
    <!-- Les textes des activités de (tutoriels) -->

    <!-- Les erreurs en tous genres -->
    <string name="notification">Entrez le message à notifier à l\'utilisateur ici</string>

    <!-- A supprimer car non utilisé -->
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>