<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_business"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_security"
            android:icon="@drawable/ic_baseline_vpn_key"
            android:title="@string/menu_security" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_content"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_content" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_baseline_bug_report"
            android:title="@string/menu_support" />
        <item
            android:id="@+id/nav_activity"
            android:icon="@drawable/ic_baseline_verified_user"
            android:title="@string/menu_activity" />
        <item
            android:id="@+id/nav_example"
            android:icon="@drawable/ic_baseline_play_circle"
            android:title="@string/menu_example" />
    </group>
</menu>